Changed margins to fix multi input overlap

--- a/blastoff.css
+++ b/blastoff.css
@@ -667,7 +667,7 @@ a.button {
   border-radius: 0px;
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
-  margin: -2px; }
+  margin: -3px; }
 
 .multi-input > .input:first-child {
   border-top-left-radius: 5px;
